# SOC_Detection_Toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_iocs.txt
docs/: project_overview.md
reports/: ioc_report.json
src/soc_detection_toolkit/: __init__.py  csv_reporter.py  ioc_parser.py  json_reporter.py  main.py  models.py
tests/: test_cli.py  test_csv_reporter.py  test_ioc_parser.py  test_json_reporter.py
