[project]
name = "soc-detection-toolkit"
version = "0.1.0"
description = "Python-based toolkit for IOC parsing, threat detection basics, MITRE ATT&CK mapping and SOC-style reporting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
soc-detection-toolkit = "soc_detection_toolkit.main:main"

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
[tool.uv.sources]
soc-detection-toolkit = { workspace = true }