[project]
name = "soc-detection-toolkit"
version = "0.1.0"
description = "Python-based toolkit for IOC parsing, threat detection basics, MITRE ATT&CK mapping and SOC-style reporting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
soc-detection-toolkit = "soc_detection_toolkit.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
